--- a/lab4/task1/task1.vcxproj
+++ b/lab4/task1/task1.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9a66400c-fe0d-419c-8b4d-1c257ca28579}</ProjectGuid>
-    <RootNamespace>Task3</RootNamespace>
+    <ProjectGuid>{75877a56-94c6-4aa4-ba04-d7081b94d846}</ProjectGuid>
+    <RootNamespace>task1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CFileInputStream.cpp" />
-    <ClCompile Include="Task3.cpp" />
+    <ClCompile Include="CCanvas.cpp" />
+    <ClCompile Include="CDesigner.cpp" />
+    <ClCompile Include="CPictureDraft.cpp" />
+    <ClCompile Include="CRectangle.cpp" />
+    <ClCompile Include="CShapeFactory.cpp" />
+    <ClCompile Include="CShapeFactory.h" />
+    <ClCompile Include="IShapeFactory.h" />
+    <ClCompile Include="task1.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IInputStream.h" />
+    <ClInclude Include="CCanvas.h" />
+    <ClInclude Include="CDesigner.h" />
+    <ClInclude Include="Common.h" />
+    <ClInclude Include="CPictureDraft.h" />
+    <ClInclude Include="CRectangle.h" />
+    <ClInclude Include="CShape.h" />
+    <ClInclude Include="ICanvas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
