--- a/lab4/task1/task1.vcxproj.filters
+++ b/lab4/task1/task1.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="CShapeFactory.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="CPainter.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CShape.h">
@@ -60,6 +63,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="CPictureDraft.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="CPainter.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
