--- a/lab5/task1/task1.vcxproj
+++ b/lab5/task1/task1.vcxproj
@@ -128,42 +128,42 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="AbstractCommand.cpp" />
-    <ClCompile Include="ChangeStringCommand.cpp" />
-    <ClCompile Include="ConstDocumentItem.cpp" />
-    <ClCompile Include="Document.cpp" />
-    <ClCompile Include="DocumentItem.cpp" />
-    <ClCompile Include="History.cpp" />
-    <ClCompile Include="Image.cpp" />
-    <ClCompile Include="ImageImpl.cpp" />
-    <ClCompile Include="InsertParagraphCommand.cpp" />
-    <ClCompile Include="ISpringWord.cpp" />
+    <ClCompile Include="CAbstractCommand.cpp" />
+    <ClCompile Include="CDocumentItem.cpp" />
+    <ClCompile Include="Editor.cpp" />
+    <ClCompile Include="HtmlDocument.cpp" />
+    <ClCompile Include="CImage.cpp" />
     <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="Paragraph.cpp" />
-    <ClCompile Include="ParagraphImpl.cpp" />
-    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="CParagraph.cpp" />
+    <ClCompile Include="History.cpp" />
+    <ClCompile Include="HtmlEncoder.cpp" />
+    <ClCompile Include="IImage.cpp" />
+    <ClCompile Include="IParagraph.cpp" />
+    <ClCompile Include="SetTitleCommand.cpp" />
     <ClCompile Include="task1.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractCommand.h" />
-    <ClInclude Include="ChangeStringCommand.h" />
+    <ClInclude Include="CDocumentItem.h" />
+    <ClInclude Include="Editor.h" />
+    <ClInclude Include="HtmlDocument.h" />
+    <ClInclude Include="CImage.h" />
+    <ClInclude Include="CInsertImageCommand.h" />
+    <ClInclude Include="InsertParagraphCommand.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="ConstDocumentItem.h" />
-    <ClInclude Include="Document.h" />
-    <ClInclude Include="DocumentItem.h" />
+    <ClInclude Include="CParagraph.h" />
+    <ClInclude Include="CReplaceTextCommand.h" />
+    <ClInclude Include="CResizeImageCommand.h" />
+    <ClInclude Include="CSetTiltleCommand.h" />
+    <ClInclude Include="DeleteItemCommand.h" />
     <ClInclude Include="History.h" />
+    <ClInclude Include="HtmlEncoder.h" />
     <ClInclude Include="ICommand.h" />
-    <ClInclude Include="ICommand_fwd.h" />
     <ClInclude Include="IDocument.h" />
     <ClInclude Include="IImage.h" />
-    <ClInclude Include="Image.h" />
-    <ClInclude Include="ImageImpl.h" />
-    <ClInclude Include="InsertParagraphCommand.h" />
     <ClInclude Include="IParagraph.h" />
-    <ClInclude Include="Menu.h" />
-    <ClInclude Include="Paragraph.h" />
-    <ClInclude Include="ParagraphImpl.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
+    <ClInclude Include="SetTitleCommand.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
