--- a/lab5/task1/task1.vcxproj
+++ b/lab5/task1/task1.vcxproj
@@ -130,13 +130,13 @@
   <ItemGroup>
     <ClCompile Include="CAbstractCommand.cpp" />
     <ClCompile Include="CDocumentItem.cpp" />
+    <ClCompile Include="DeleteItemCommand.cpp" />
     <ClCompile Include="Editor.cpp" />
     <ClCompile Include="HtmlDocument.cpp" />
     <ClCompile Include="CImage.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="CParagraph.cpp" />
     <ClCompile Include="History.cpp" />
-    <ClCompile Include="HtmlEncoder.cpp" />
     <ClCompile Include="IImage.cpp" />
     <ClCompile Include="IParagraph.cpp" />
     <ClCompile Include="SetTitleCommand.cpp" />
@@ -158,7 +158,6 @@
     <ClInclude Include="CSetTiltleCommand.h" />
     <ClInclude Include="DeleteItemCommand.h" />
     <ClInclude Include="History.h" />
-    <ClInclude Include="HtmlEncoder.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="IDocument.h" />
     <ClInclude Include="IImage.h" />
