--- a/lab5/task1/task1.vcxproj
+++ b/lab5/task1/task1.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="History.cpp" />
     <ClCompile Include="IImage.cpp" />
     <ClCompile Include="IParagraph.cpp" />
+    <ClCompile Include="ReplaceTextCommand.cpp" />
     <ClCompile Include="SetTitleCommand.cpp" />
     <ClCompile Include="task1.cpp" />
   </ItemGroup>
@@ -153,10 +154,10 @@
     <ClInclude Include="Menu.h" />
     <ClInclude Include="ConstDocumentItem.h" />
     <ClInclude Include="CParagraph.h" />
-    <ClInclude Include="CReplaceTextCommand.h" />
+    <ClInclude Include="ReplaceTextCommand.h" />
     <ClInclude Include="CResizeImageCommand.h" />
     <ClInclude Include="CSetTiltleCommand.h" />
-    <ClInclude Include="DeleteItemCommand.h" />
+    <ClInclude Include="CDeleteItemCommand.h" />
     <ClInclude Include="History.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="IDocument.h" />
