--- a/lab5/task1/task1.vcxproj.filters
+++ b/lab5/task1/task1.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="ConstDocumentItem.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="CResizeImageCommand.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AbstractCommand.h">
